add: unit tests
refactoring of use cases, split into smaller methods.